objects/ChatterAuditSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Setup data for Chatter Compliance app</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the batch process is currently running</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ArchivedPMessagesJobId__c</fullName>
        <label>Archived Private Messages Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArchivedPMessagesUpdateFreq__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Archived Private Messages Update Freq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ArchivedPMessagesUpdateLastExecution__c</fullName>
        <label>Archived Private Messages Update Last Ex</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChatterAuditOwnerId__c</fullName>
        <description>SFDC record Id for the user designated as owner for all chatter compliance records</description>
        <label>Chatter Compliance OwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterAuditUpdateFequency__c</fullName>
        <description>Set the batch process frequency.Any number from 1 to 23 hours.</description>
        <label>Batch Update Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContentVersionDeleteBlocker__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Protect files attached to a chatter conversation by setting this field ON</inlineHelpText>
        <label>Content Version Delete Blocker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreviousChatterDataLoaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous Chatter Data Loaded</label>
        <type>Checkbox</type>
    </fields>
    <label>ChatterComplianceSettings</label>
</CustomObject>